18/10/2025 Running Test Implementations (LoginViewModelTest, DashboardViewModelTest and NitRepositoryTest)